--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
     "react-native": "0.64.0",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-linear-gradient": "^2.5.6",
-    "react-native-reanimated": "^2.0.1",
+    "react-native-reanimated": "^2.0.0",
     "react-native-safe-area-context": "^3.2.0",
     "react-native-screens": "^3.0.0",
     "react-native-svg": "^12.1.0",
+    "react-native-svg-charts": "^5.4.0",
+    "react-native-svg-uri": "^1.2.3",
     "react-native-tab-view": "2.16.0",
     "react-native-vector-icons": "^8.1.0"
   },
